--- a/leafy_oasis/src/App.css
+++ b/leafy_oasis/src/App.css
@@ -2,3 +2,44 @@
   display: flex;
   flex-direction: column;
 }
+
+
+/* FOOTER */
+
+.footer{
+  height: 220px;
+  /* position: fixed; */
+  bottom: 0;
+  background: #201D1E;
+  padding: 10px 0;
+  width: 100%;
+
+
+}
+.footer h5{
+color: rgb(244, 86, 255);
+}
+.footer_logo{
+  height: 50%;
+  width: 50%;
+  
+}
+.mar{
+  margin-left: 3%;
+}
+
+.social-icons{
+  text-align: center;
+  font-size: 20px;
+  margin: auto;
+  max-width: 30%;
+}
+hr{
+  width:50%;
+  margin:1%;
+  border: 3px solid rgb(0, 0, 0); 
+  border-radius: 5px;
+   width: 80%;
+    margin: auto
+}
+/* FOOTER FINISHED */
