--- a/leafy_oasis/src/Pages/Contact.css
+++ b/leafy_oasis/src/Pages/Contact.css
@@ -1,9 +1,3 @@
-/* body{
-    background-color:rgb(199, 179, 179) ;
-    color: black;
-    font-family: 'Courier New', Courier, monospace;
-    padding-top:60px;
-} */
 .contact__form .form-control{
     padding: 1.75em;
     line-height: 1.5;
@@ -23,5 +17,5 @@
      border:1px solid;
 }
 .btn:hover{
-    color:black;
+    color:rgb(0, 255, 38);
 }
