--- a/leafy_oasis/src/Pages/Search.css
+++ b/leafy_oasis/src/Pages/Search.css
@@ -1,4 +1,4 @@
-button {
+  button {
     margin: 20px;
   }
   .custom-btn {
@@ -46,18 +46,7 @@ button {
     width: 100%;
     height: 100%;
   }
-  .btn-6:before,
-  .btn-6:after {
-    position: absolute;
-    content: "";
-    height: 0%;
-    width: 1px;
-   box-shadow:
-     -1px -1px 20px 0px rgba(255,255,255,1),
-     -4px -4px 5px 0px rgba(255,255,255,1),
-     7px 7px 20px 0px rgba(0,0,0,.4),
-     4px 4px 5px 0px rgba(0,0,0,.3);
-  }
+
   .btn-6:before {
     right: 0;
     top: 0;
@@ -187,41 +176,25 @@ h1 {
   grid-column-start: auto;
   grid-row-start: auto;
   color: #fff;
-  /* background: url("https://images.unsplash.com/photo-1470124182917-cc6e71b22ecc?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop="); */
   background-size: cover;
   background-position: center;
   box-shadow: -2px 2px 10px 0px rgba(68, 68, 68, 0.4);
   transition: transform 0.3s ease-in-out;
   cursor: pointer;
-  /* counter-increment: item-counter; */
+  
 }
-/* .item:nth-of-type(3n) {
-  background-image: url("https://images.unsplash.com/photo-1422255198496-21531f12a6e8?dpr=2&auto=format&fit=crop&w=1500&h=996&q=80&cs=tinysrgb&crop=");
-}
-.item:nth-of-type(4n) {
-  background-image: url("https://images.unsplash.com/photo-1490914327627-9fe8d52f4d90?dpr=2&auto=format&fit=crop&w=1500&h=2250&q=80&cs=tinysrgb&crop=");
-}
-.item:nth-of-type(5n) {
-  background-image: url("https://images.unsplash.com/photo-1476097297040-79e9e1603142?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=");
-}
-.item:nth-of-type(6n) {
-  background-image: url("https://images.unsplash.com/photo-1464652149449-f3b8538144aa?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=");
-} */
+
 .item:after {
   content: "";
-  /* position: absolute; */
   width: 100%;
   height: 100%;
-  /* background-color: black; */
   opacity: 0.3;
   transition: opacity 0.3s ease-in-out;
 }
 .item:hover {
   transform: scale(1.05);
 }
-/* .item:hover:after {
-  opacity: 0;
-} */
+
 .item--medium {
   grid-row-end: span 2;
 }
@@ -238,26 +211,19 @@ h1 {
   }
 }
 .item__details {
-  /* position: relative; */
   z-index: 1;
   padding: 15px;
   color: #444;
   background: #31e9036b;
-  /* text-transform: lowercase; */
   letter-spacing: 1px;
   color: #040000f6;
 }
-/* .item__details:before {
-  content: counter(item-counter);
-  font-weight: bold;
-  font-size: 1.1rem;
-  padding-right: 0.5em;
-  color: #444;
-} */
+
 /* GRID CSS DONE */
-
-
-
+.form_service{
+  margin-left: 35%;
+ 
+}
 
 /* TABLE */
 
