--- a/leafy_oasis/src/Components/Navbar.css
+++ b/leafy_oasis/src/Components/Navbar.css
@@ -25,9 +25,9 @@
                             Navbar
     ======================================================*/
   #navbar {
-    background: white;
+    /* background: rgba(255, 255, 255, 0); */
     color: rgb(13, 26, 38);
-    /* position: fixed; */
+    position: fixed;
     top: 0;
     height: 60px;
     line-height: 60px;
@@ -53,7 +53,7 @@
     float:left;
     margin-left: 28px;
     font-size: 2.5em;
-    height: 60px;
+    height: 50px;
     letter-spacing: 1px;
     text-transform: uppercase;
     color:rgb(5, 152, 56);
@@ -99,7 +99,7 @@
   }
   
   #navbar li a:hover {
-    /* border-bottom: 1px solid rgb(28, 121, 184); */
+  
     color: rgb(28, 121, 184);
     transition: all 1s ease;
     -webkit-transition: all 1s ease;
@@ -139,117 +139,146 @@
   }
   
   
-  
-  /*======================================================
-                      Mobile Menu Menu Icon
-    ======================================================*/
-  @media(max-width: 640px) {
-    .menuIcon {
-      cursor: pointer;
-      display: block;
-      position: fixed;
-      right: 15px;
-      top: 20px;
-      height: 23px;
-      width: 27px;
-      z-index: 12;
-    }
-  
-    /* Icon Bars */
-    .icon-bars {
-      background: rgb(13, 26, 38);
-      position: absolute;
-      left: 1px;
-      top: 45%;
-      height: 2px;
-      width: 20px;
-      -webkit-transition: 0.4s;
-      transition: 0.4s;
-    } 
-  
-    .icon-bars::before {
-      background: rgb(13, 26, 38);
-      content: '';
-      position: absolute;
-      left: 0;
-      top: -8px;
-      height: 2px;
-      width: 20px;
-  /*     -webkit-transition: top 0.2s ease 0.3s;
-      transition: top 0.2s ease 0.3s; */
-      -webkit-transition: 0.3s width 0.4s;
-      transition: 0.3s width 0.4s;
-    }
-  
-    .icon-bars::after {
-      margin-top: 0px;
-      background: rgb(13, 26, 38);
-      content: '';
-      position: absolute;
-      left: 0;
-      bottom: -8px;
-      height: 2px;
-      width: 20px;
-  /*     -webkit-transition: top 0.2s ease 0.3s;
-      transition: top 0.2s ease 0.3s; */
-      -webkit-transition: 0.3s width 0.4s;
-      transition: 0.3s width 0.4s;
-    }
-  
+/*======================================================
+                    Mobile Menu Menu Icon
+  ======================================================*/
+@media(max-width: 640px) {
+  .menuIcon {
+    cursor: pointer;
+    display: block;
+    position: fixed;
+    right: 15px;
+    top: 20px;
+    height: 23px;
+    width: 27px;
+    z-index: 15;
+  }
 
-    /* Toggle Menu Icon */
-    .menuIcon.toggle .icon-bars {
-      top: 5px;
-      transform: translate3d(0, 5px, 0) rotate(135deg);
-      transition-delay: 0.1s;
-      transition: transform 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    }
-  
-  }
-  
-  
-  /*======================================================
-                     Responsive Mobile Menu 
-    ======================================================*/
-  .overlay-menu {
-    background: lightblue;
-    color: rgb(13, 26, 38);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  /* Icon Bars */
+  .icon-bars {
+    background: rgb(13, 26, 38);
     position: absolute;
+    left: 1px;
+    top: 45%;
+    height: 2px;
+    width: 20px;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  } 
+
+  .icon-bars::before {
+    background: rgb(13, 26, 38);
+    content: '';
+    position: absolute;
+    left: 0;
+    top: -8px;
+    height: 2px;
+    width: 20px;
+/*     -webkit-transition: top 0.2s ease 0.3s;
+    transition: top 0.2s ease 0.3s; */
+    -webkit-transition: 0.3s width 0.4s;
+    transition: 0.3s width 0.4s;
+  }
+
+  .icon-bars::after {
+    margin-top: 0px;
+    background: rgb(13, 26, 38);
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    height: 2px;
+    width: 20px;
+/*     -webkit-transition: top 0.2s ease 0.3s;
+    transition: top 0.2s ease 0.3s; */
+    -webkit-transition: 0.3s width 0.4s;
+    transition: 0.3s width 0.4s;
+  }
+
+
+
+
+  /* Toggle Menu Icon */
+  .menuIcon.toggle .icon-bars {
+    top: 5px;
+    transform: translate3d(0, 5px, 0) rotate(135deg);
+    transition-delay: 0.1s;
+    transition: transform 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+
+  .menuIcon.toggle .icon-bars::before {
     top: 0;
-    right: 0;
-    padding-right: 15px;
-    transform: translateX(-100%);
-    width: 100vw;
-    height: 100vh;
-    -webkit-transition: transform 0.2s ease-out;
-    transition: transform 0.2s ease-out;
+    transition-delay: 0.1s;
+    opacity: 0;
   }
-  
-  .overlay-menu ul, .overlay-menu li {
-    display: block;
-    position: relative;
+
+  .menuIcon.toggle .icon-bars::after {
+    top: 10px;
+    transform: translate3d(0, -10px, 0) rotate(-270deg);
+    transition-delay: 0.1s;
+    transition: transform 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
-  
-  .overlay-menu li a {
-    display: block;
-    font-size: 1.8em;
-    letter-spacing: 4px;
-  /*   opacity: 0; */
-    padding: 10px 0;
-    text-align: right;
-    text-transform: uppercase;
-    -webkit-transition: color 0.3s ease;
-    transition: color 0.3s ease;
-  /*   -webkit-transition: 0.2s opacity 0.2s ease-out;
-    transition: 0.2s opacity 0.2s ease-out; */
-  }
-  
-  .overlay-menu li a:hover,
-  .overlay-menu li a:active {
-    color: rgb(28, 121, 184);
-    -webkit-transition: color 0.3s ease;
-    transition: color 0.3s ease;
-  }
+}
+
+
+/*======================================================
+                   Responsive Mobile Menu 
+  ======================================================*/
+.overlay-menu {
+  background: lightblue;
+  color: rgb(13, 26, 38);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding-right: 15px;
+  transform: translateX(-100%);
+  width: 100vw;
+  height: 100vh;
+  -webkit-transition: transform 0.2s ease-out;
+  transition: transform 0.2s ease-out;
+  z-index: 12;
+}
+
+.overlay-menu ul, .overlay-menu li {
+  display: block;
+  position: relative;
+}
+
+.overlay-menu li a {
+  display: block;
+  font-size: 1.8em;
+  letter-spacing: 4px;
+/*   opacity: 0; */
+  padding: 10px 0;
+  text-align: right;
+  text-transform: uppercase;
+  -webkit-transition: color 0.3s ease;
+  transition: color 0.3s ease;
+/*   -webkit-transition: 0.2s opacity 0.2s ease-out;
+  transition: 0.2s opacity 0.2s ease-out; */
+}
+
+.overlay-menu li a:hover,
+.overlay-menu li a:active {
+  color: rgb(28, 121, 184);
+  -webkit-transition: color 0.3s ease;
+  transition: color 0.3s ease;
+}
+
+
+.navIcon{
+  /* width: 100%; */
+  height: 100%;
+
+  margin-bottom: 10px;
+}
+
+.solid{
+  background: rgb(255, 255, 255);
+}
+.transparent{
+  background: rgba(255, 255, 255, 0);
+}
