--- a/leafy_oasis/src/App.css
+++ b/leafy_oasis/src/App.css
@@ -2,16 +2,21 @@
   display: flex;
   flex-direction: column;
 }
-
+body{
+  
+    /* overflow-y: hidden; Hide vertical scrollbar */
+    overflow-x: hidden; /* Hide horizontal scrollbar */
+    background-image: url(https://img.freepik.com/free-vector/potted-plant-doodle-vector-background_53876-126321.jpg?w=2000 );;
+  
+}
 
 /* FOOTER */
 
 .footer{
-  height: 220px;
-  /* position: fixed; */
+ 
   bottom: 0;
-  background: #201D1E;
-  padding: 10px 0;
+  background: #251f21;
+  
   width: 100%;
 
 
@@ -30,9 +35,9 @@ color: rgb(244, 86, 255);
 
 .social-icons{
   text-align: center;
-  font-size: 20px;
-  margin: auto;
-  max-width: 30%;
+  /* margin-top:none;  */
+  /* max-width: 50%; */
+  align-content: space-around;
 }
 hr{
   width:50%;
@@ -42,4 +47,5 @@ hr{
    width: 80%;
     margin: auto
 }
+
 /* FOOTER FINISHED */
