--- a/leafy_oasis/src/Components/ParallaxScroll.css
+++ b/leafy_oasis/src/Components/ParallaxScroll.css
@@ -161,6 +161,42 @@
   background-position: center center;
 }
 
+
+#parallax-world-of-ugg .parallax-four {
+  padding-top: 200px;
+  padding-bottom: 200px;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  background-image: url(https://images.unsplash.com/photo-1493673272479-a20888bcee10?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cGxhbnQlMjB3YWxscGFwZXJ8ZW58MHx8MHx8&w=1000&q=80);
+  background-attachment: fixed;
+  background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+
+
+
+
+
+#parallax-world-of-ugg .parallax-five {
+  padding-top: 200px;
+  padding-bottom: 200px;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  background-image: url(https://img.freepik.com/free-photo/collage-customer-experience-concept_23-2149367121.jpg?w=1380&t=st=1682502622~exp=1682503222~hmac=74cc2cd1a442ab0fe4aadf13ee1ff483e26776069a3e0743d07f5a8fa0e487a2);
+  background-attachment: fixed;
+  background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
 /* Extras */
 /**************************/
 #parallax-world-of-ugg .line-break {
