--- a/leafy_oasis/src/Components/ParallaxScroll.css
+++ b/leafy_oasis/src/Components/ParallaxScroll.css
@@ -147,8 +147,8 @@
   background-position: center center;
 }
 #parallax-world-of-ugg .parallax-three {
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   overflow: hidden;
   position: relative;
   width: 100%;
@@ -201,3 +201,127 @@
     width: 290px;
   }
 }
+
+img{
+  height: 400px;
+  float: right;
+  padding-right: 20px;
+}
+.heading1{
+  font-family: "Oswald", sans-serif;
+  font-size: 70px;
+  letter-spacing: 10px;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  
+  font-weight: 400;
+  text-transform: uppercase;
+  z-index: 10;
+  opacity: 0.9;
+  text-shadow: #f2f2f2;
+}
+
+
+
+
+
+
+button {
+  margin: 20px;
+}
+.custom-btn-7 {
+  font-family: "Oswald", sans-serif;
+  font-size: 50px;
+  letter-spacing: 10px;
+  text-align: center;  
+  text-transform: uppercase;
+  z-index: 8;
+  opacity: 0.9;
+  
+  width: 400px;
+  height: 80px;
+  color: #fff;
+  border-radius: 5px;
+  padding: 10px 25px;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+   7px 7px 20px 0px rgba(0,0,0,.1),
+   4px 4px 5px 0px rgba(0,0,0,.1);
+  border-radius: 200px;
+}
+.custom-btn7 {
+  font-family: "Oswald", sans-serif;
+  font-size: 70px;
+  letter-spacing: 10px;
+  text-align: center;  
+  font-weight: 400;
+  text-transform: uppercase;
+  z-index: 8;
+  opacity: 0.9;
+  
+  width: 500px;
+  height: 100px;
+  color: #fff;
+  border-radius: 5px;
+  padding: 10px 25px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 600;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+   7px 7px 20px 0px rgba(0,0,0,.1),
+   4px 4px 5px 0px rgba(0,0,0,.1);
+  border-radius: 200px;
+}
+
+/* 7 */
+.btn-7 {
+  background: linear-gradient(0deg, rgba(0, 255, 4, 0.652) 0%, rgba(0, 0, 0, 0.548) 100%);
+    line-height: 42px;
+    padding: 0;
+    border: none;
+  }
+  .btn-7:before,
+  .btn-7:after {
+    position: absolute;
+    content: "";
+    right: 0;
+    bottom: 0;
+    background: rgb(16, 247, 0);
+    box-shadow:
+     -7px -7px 20px 0px rgba(255,255,255,.9),
+     -4px -4px 5px 0px rgba(255,255,255,.9),
+     7px 7px 20px 0px rgba(0,0,0,.2),
+     4px 4px 5px 0px rgba(0,0,0,.3);
+    transition: all 0.3s ease;
+  }
+  .btn-7:before{
+     height: 0%;
+     width: 2px;
+  }
+  .btn-7:after {
+    width: 0%;
+    height: 2px;
+  }
+  .btn-7:hover{
+    color: rgb(0, 175, 61);
+    background: transparent;
+  }
+  .btn-7:hover:before {
+    height: 100%;
+  }
+  .btn-7:hover:after {
+    width: 100%;
+  }
+
+  .cent{
+    margin-top: 70px;
+    text-align: center;
+  }
