--- a/leafy_oasis/src/Pages/Login.css
+++ b/leafy_oasis/src/Pages/Login.css
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
-.A{
+.Aa{
  /* display: absolute;
 align-items:stretch;
 justify-content: center;
