--- a/leafy_oasis/src/Components/carousel.css
+++ b/leafy_oasis/src/Components/carousel.css
@@ -185,7 +185,7 @@ figure.snip1197 .author {
   top: 100%;
   width: 60%;
   padding: 10px 15px;
-  color: #bd0c0c;
+  color: #885fd9;
   margin: 0;
   text-transform: uppercase;
 }
